<resources>
    <string name="app_name">MovieDroid</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_movies">Top movies</string>
    <string name="top_tv_shows">Top TV Shows</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="num_entries">%d Entries</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="some_awesome_feature_is_on_its_way">Some awesome feature is on its way!</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="no_result_found">No result found</string>

    <string name="toast_exception">Exception : %1$s</string>

    <string name="movie_item_category">movie</string>
    <string name="tv_item_category">tv</string>

    <string name="watching_status">watching</string>
    <string name="completed_status">completed</string>
    <string name="on_hold_status">on hold</string>
    <string name="dropped_status">dropped</string>
    <string name="plan_to_watch_status">plan to watch</string>
    <string name="add_to_list_status">add to list</string>

    <string name="all_tab">All</string>
    <string name="watching_tab">Watching</string>
    <string name="completed_tab">Completed</string>
    <string name="on_hold_tab">On Hold</string>
    <string name="dropped_tab">Dropped</string>
    <string name="plan_to_watch_tab">Plan to Watch</string>

    <string name="currently_signed_in">Currently Signed in: %1$s</string>
    <string name="currently_logged_in">Currently Logged in: %1$s</string>
    <string name="google_sign_in_succeeded">Google Sign in Succeeded</string>
    <string name="google_sign_in_failed">Google Sign in Failed </string>
    <string name="firebase_auth_with_google">firebaseAuthWithGoogle: %1$s</string>
    <string name="firebase_auth_succeeded">Firebase Authentication Succeeded</string>
    <string name="firebase_auth_failed">Firebase Authentication failed:  %1$s</string>
    <string name="signinwithcredential_failure">signInWithCredential:failure</string>
    <string name="signinwithcredential_success">signInWithCredential:success: currentUser: %1$s"</string>

    <string name="rating_10">10 - Masterpiece</string>
    <string name="rating_9">9 - Amazing</string>
    <string name="rating_8">8 - Great</string>
    <string name="rating_7">7 - Good</string>
    <string name="rating_6">6 - Fine</string>
    <string name="rating_5">5 - Average</string>
    <string name="rating_4">4 - Bad</string>
    <string name="rating_3">3 - Very Bad</string>
    <string name="rating_2">2 - Horrible</string>
    <string name="rating_1">1 - Nightmare</string>

    <string name="welcome">Welcome</string>
    <string name="to">to</string>
    <string name="email_id">youremailid@gmail.com</string>
    <string name="name">Name</string>
    <string name="app_description" translatable="false">MovieDroid is a completely free and open source native android application that maintains an organized and categorized list of a user\'s favourite movies and TV shows.</string>
    <string name="github" translatable="false">Github</string>
    <string name="about" translatable="false">About</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="in_theatre">In Theatre</string>
    <string name="most_popular_movies">Most Popular Movies</string>
    <string name="most_popular_tv_shows">Most Popular TV Shows</string>
</resources>
